client/src/components/base/Header/Menu/Menu.scss
.menu {
  font-size: 1.6em;
  padding: 1rem 1rem;
  width: 600px;
}

.menu--list {
  list-style-type: none;
  width: 100%;
}

.menu--list-link {
  color: var(--basic-text);
  outline: none;
  transition: text-decoration, text-shadow 0.7s;
}

.link-button {
  margin: 0 1rem;
}

.menu--list-link:focus,
.menu--list-link:hover {
  font-weight: 700;
  text-decoration: underline var(--primary-color);
  text-shadow: 0 0 1px var(--primary-color);
}

.menu--list li {
  border-bottom: 1px solid #444;
  padding: 1rem;
}

